--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,14 @@
     .button {
         @apply py-2 px-4 border border-transparent text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2;
     }
+
+    .pill {
+        @apply inline-flex items-center shadow-sm px-2.5 py-0.5 border border-gray-300 text-sm leading-5 font-medium rounded-full text-gray-700 bg-white hover:bg-gray-50
+    }
+
+    .pill.danger {
+        @apply border-red-300 text-red-700 bg-white hover:bg-red-50
+    }
 }
 
 .vue2leaflet-map {
