--- a/src/app.css
+++ b/src/app.css
@@ -8,14 +8,26 @@
     }
 
     .pill {
-        @apply inline-flex items-center shadow-sm px-2.5 py-0.5 border border-gray-300 text-sm leading-5 font-medium rounded-full text-gray-700 bg-white hover:bg-gray-50
+        @apply inline-flex items-center shadow-sm px-2.5 py-0.5 border border-gray-300 text-sm leading-5 font-medium rounded-full text-gray-700 bg-white hover:bg-gray-50;
     }
 
     .pill.danger {
-        @apply border-red-300 text-red-700 bg-white hover:bg-red-50
+        @apply border-red-300 text-red-700 bg-white hover:bg-red-50;
+    }
+
+    .menu-active {
+        @apply text-gray-900;
+    }
+
+    nav#navigation .menu-item:not(.menu-active) {
+        @apply text-gray-400 hover:text-gray-900;
     }
 }
 
 .vue2leaflet-map {
     z-index: 10;
+}
+
+main {
+    flex: 1 0 auto;
 }
